fix unmodifiable list